syntax = "proto3";

package model;

option go_package = "github.com/apibrew/apibrew/pkg/model";

import 'google/protobuf/struct.proto';
import 'model/audit.proto';
import 'model/common.proto';
import 'model/security.proto';
import 'model/hcl.proto';

message Role {
  string id = 1 [(model.hcl_ignore) = true];
  string name = 2;
  SecurityContext securityContext = 5 [(model.hcl_block) = "securityContext"];
  google.protobuf.Struct details = 6;

  AuditData auditData = 101;
  uint32 version = 102;
}
